--- a/09---Fill-Pattern-With=Shadow/style.css
+++ b/09---Fill-Pattern-With=Shadow/style.css
@@ -4,13 +4,13 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: #000;
-}
+/* body {
+    background-color: #180000;
+} */
 
 canvas {
     border: 10px solid black;
-    background-color: #180000;
+    /* background-color: #000; */
     position: absolute;
     top: 50%;
     left: 50%;
